--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -29,13 +29,13 @@ const { title, description, image = "/nano.png" } = Astro.props;
 <link
   rel="icon"
   type="image/svg+xml"
-  href="/favicon-dark.svg"
+  href="/favicon-dark.png"
   media="(prefers-color-scheme: dark)"
 />
 <link
   rel="icon"
   type="image/svg+xml"
-  href="/favicon-light.svg"
+  href="/favicon-light.png"
   media="(prefers-color-scheme: light)"
 />
 <link rel="icon" type="image/x-icon" href="/favicon-light.svg" />
