--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@ body {
 
 header {
   @apply fixed top-0 left-0 right-0 z-50 py-5;
-  @apply bg-[#E6E6DC]/75 dark:bg-[#282726]/25;
+  @apply bg-[#E2E0D4]/75 dark:bg-[#000000]/25;
   @apply backdrop-blur-sm saturate-200;
 }
 
