feat: Update header links and adjust project count in constants

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,10 +18,10 @@ import { SITE } from "@consts";
           {`/`}
         </span>
         <Link href="/work"> work </Link>
-        <span>
+        <!-- <span>
           {`/`}
         </span>
-        <Link href="/thoughts"> thoughts </Link>
+        <Link href="/thoughts"> thoughts </Link> -->
       </nav>
     </div>
   </Container>
