--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,7 @@ const work = await Promise.all(
         </ul>
       </section>
 
-      <section class="animate space-y-6">
+      <!-- <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">Latest posts</h5>
           <Link href="/thoughts"> See all posts </Link>
@@ -122,7 +122,7 @@ const work = await Promise.all(
             ))
           }
         </ul>
-      </section>
+      </section> -->
 
       <section class="animate space-y-4">
         <h5 class="font-semibold text-black dark:text-white">Let's Connect</h5>
